# woodcraft

./: .gitignore  README.md  pyproject.toml
Woodcraft.Desktop/: Woodcraft.Desktop.sln
Woodcraft.Desktop/src/Woodcraft.Core/: Woodcraft.Core.csproj
Woodcraft.Desktop/src/Woodcraft.Core/Extensions/: UnitExtensions.cs
Woodcraft.Desktop/src/Woodcraft.Core/Interfaces/: ICadService.cs  IConfigService.cs  IExportService.cs  IProjectService.cs
Woodcraft.Desktop/src/Woodcraft.Core/Models/: AssemblyStep.cs  BillOfMaterials.cs  CutListResult.cs  Dimensions.cs  Enums.cs  Hardware.cs  Joint.cs  JointParameterDefinitions.cs  Material.cs  Part.cs  Project.cs
Woodcraft.Desktop/src/Woodcraft.Desktop/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  Woodcraft.Desktop.csproj  app.manifest
Woodcraft.Desktop/src/Woodcraft.Desktop/Assets/: config.lua
Woodcraft.Desktop/tests/Woodcraft.Core.Tests/: Woodcraft.Core.Tests.csproj
Woodcraft.Desktop/tests/Woodcraft.Desktop.Tests/: Woodcraft.Desktop.Tests.csproj
examples/bookshelf/: bookshelf.json
src/woodcraft/: __init__.py  server.py
src/woodcraft/data/: hardware.json  lumber.json  species.json
src/woodcraft/engine/: __init__.py  assembly.py  joinery.py  modeler.py
src/woodcraft/generators/: __init__.py  bom.py  cutlist.py  drawing.py  guide.py
src/woodcraft/tools/: __init__.py  cutlist.py  design.py  documentation.py  export.py  project.py
src/woodcraft/utils/: __init__.py  units.py  validation.py
tests/: __init__.py  test_cutlist.py  test_modeler.py  test_units.py  test_validation.py
(+50 files in other folders)
